created cart.html and was finished to end by scss

--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,10 @@ body {
   font-style: normal;
 }
 
+button {
+  font-family: Lato;
+}
+
 .container {
   width: 1140px;
   margin: 0 auto;
@@ -633,6 +637,10 @@ body {
   width: 359px;
 }
 
+.registration .registarion__block .form-block {
+  box-sizing: border-box;
+}
+
 .registration .registarion__block .wrapper-form__text {
   font-size: 16px;
   line-height: 19px;
@@ -738,5 +746,225 @@ body {
 .registration .registarion__block .perks-list__item:before {
   content: url(../imgs/check-mark.svg);
   padding-right: 22px;
+}
+
+.shopping-cart .heading-block {
+  min-height: 148px;
+  display: flex;
+  align-items: center;
+  background: #F8F3F4;
+}
+
+.shopping-cart .heading-block__heading {
+  color: #F16D7F;
+  font-size: 24px;
+  line-height: 29px;
+  font-weight: normal;
+  text-transform: uppercase;
+}
+
+.shopping-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.cart-list {
+  padding-top: 96px;
+}
+
+.cart-block {
+  display: flex;
+  width: 652px;
+  min-height: 306px;
+  filter: drop-shadow(17px 19px 24px rgba(0, 0, 0, 0.13));
+  padding-bottom: 40px;
+}
+
+.wrapper-img {
+  width: 262px;
+  height: 306px;
+}
+
+.block-items {
+  width: 390px;
+  min-height: 306px;
+  background-color: #FBFBFB;
+  position: relative;
+  padding: 22px 0 0 31px;
+  box-sizing: border-box;
+}
+
+.block-items__heading-cart {
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 29px;
+  width: 201px;
+  padding-bottom: 36px;
+}
+
+.block-items__list-desc {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 22px;
+  line-height: 26px;
+}
+
+.desc-items {
+  color: #575757;
+}
+
+.cart-info {
+  padding-top: 6px;
+}
+
+.cart-info__value-pink {
+  color: #F16D7F;
+}
+
+.value-input__wrapper {
+  border: 1px solid #EAEAEA;
+  width: 43.19px;
+  height: 24.12px;
+  margin-left: 15px;
+  font-size: 18px;
+  line-height: 22px;
+  margin-left: 24px;
+  text-align: center;
+}
+
+.block-items__button-close {
+  position: absolute;
+  right: 22px;
+  top: 28px;
+  border: none;
+  background-color: #FBFBFB;
+}
+
+.cart-list__button-wrapper {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 32px;
+  padding-bottom: 128px;
+}
+
+.clear-cart__button {
+  width: 235px;
+  height: 50px;
+  background-color: white;
+  border: 1px solid #A4A4A4;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 17px;
+}
+
+.continue-cart__button {
+  width: 225px;
+  height: 50px;
+  background-color: white;
+  border: 1px solid #A4A4A4;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 17px;
+}
+
+.delivery {
+  padding: 113px;
+  width: 360px;
+}
+
+.wrapper-form__text {
+  font-style: normal;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 19px;
+}
+
+.wrapper-form__block-info {
+  width: 360px;
+  min-height: 45px;
+  margin-top: 20px;
+  border: 1px solid #A4A4A4;
+  padding-left: 17px;
+  box-sizing: border-box;
+}
+
+.checkout-delivery {
+  background-color: #F5F3F3;
+  min-width: 360px;
+  height: 214px;
+  margin-top: 57.5px;
+  position: relative;
+  text-align: right;
+}
+
+.delivery__form-button {
+  border: 1px solid #A4A4A4;
+  width: 100.39px;
+  height: 34px;
+  background: none;
+  font-weight: 300;
+  font-size: 11px;
+  line-height: 13px;
+  color: #4A4A4A;
+  margin-top: 24px;
+}
+
+.sub-price {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 11px;
+  line-height: 13px;
+  padding: 39px 34px 12px;
+}
+
+.sub-price__text {
+  padding-right: 20px;
+  font-weight: 400;
+  color: #4A4A4A;
+}
+
+.sub-price__value {
+  color: #4A4A4A;
+}
+
+.total-price {
+  font-style: normal;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 19px;
+  padding: 0 37px 13px;
+}
+
+.total-price__text {
+  padding-right: 18px;
+  color: #4A4A4A;
+}
+
+.total-price__value-pink {
+  color: #F16D7F;
+  font-weight: 700;
+}
+
+.hr {
+  border: 0;
+  border-bottom: 3px solid #e2e2e2;
+  width: 275px;
+}
+
+.delivery__button-checkout {
+  width: 274px;
+  height: 50px;
+  background-color: #F16D7F;
+  border: none;
+  color: #FBFBFB;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 19px;
+  position: absolute;
+  left: 44px;
+  bottom: 42px;
 }
 /*# sourceMappingURL=style.css.map */
