--- a/scss/blocks/registration/_form+perks.scss
+++ b/scss/blocks/registration/_form+perks.scss
@@ -9,6 +9,11 @@
             width: 359px;
         }
 
+        .form-block {
+            box-sizing: border-box;
+
+        }
+
         .wrapper-form__text {
             @include font(16px, 19px, 300);
 
@@ -20,6 +25,7 @@
             margin-top: 20px;
             border: 1px solid #A4A4A4;
             padding-left: 17px;
+
         }
 
         .radio-wrapper {
