--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,3 +15,7 @@
 
 @import "./blocks/registration/header-reg";
 @import "./blocks/registration/form+perks";
+
+@import "./blocks/cart/header-cart";
+@import "./blocks/cart/cart-list";
+@import "./blocks/cart/delivery";
