--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,7 @@
 @import "./blocks/registration/header-reg";
 @import "./blocks/registration/form+perks";
 
+@import "./blocks/cart/shopping-wrapper";
 @import "./blocks/cart/header-cart";
 @import "./blocks/cart/cart-list";
 @import "./blocks/cart/delivery";
