--- a/scss/blocks/cart/_cart-list.scss
+++ b/scss/blocks/cart/_cart-list.scss
@@ -1,132 +1,87 @@
-.shopping-wrapper {
-    display: flex;
-    justify-content: space-between;
-}
-
 .cart-list {
     padding-top: 96px;
-}
 
+    .cart-block {
+        display: flex;
+        width: 652px;
+        min-height: 306px;
+        filter: drop-shadow(17px 19px 24px rgba(0, 0, 0, 0.13));
+        padding-bottom: 40px;
+    }
 
+    .cart-img {
+        width: 262px;
+        height: 306px;
+    }
 
-.cart-list__wrapper {}
+    .cart-block__block-items {
+        width: 390px;
+        min-height: 306px;
+        background-color: $white-color;
+        position: relative;
+        padding: 22px 0 0 31px;
+        box-sizing: border-box;
+    }
 
-.cart-blocks {}
+    .cart-items__heading-cart {
+        @include font(24px, 29px, normal, normal);
+        width: 201px;
+        padding-bottom: 36px;
+    }
 
-.cart-block {
-    display: flex;
-    width: 652px;
-    min-height: 306px;
-    filter: drop-shadow(17px 19px 24px rgba(0, 0, 0, 0.13));
-    padding-bottom: 40px;
+    .cart-items__list-desc {
+        @include font(22px, 26px, normal, normal);
+    }
 
-}
+    .desc-items {
+        color: #575757;
+    }
 
-.cart-block__img-wrapper {}
+    .cart-info {
+        padding-top: 6px;
+    }
 
-.wrapper-img {
-    width: 262px;
-    height: 306px;
-}
+    .cart-info__value-pink {
+        color: $darkpink-color;
+    }
 
-.wrapper-img__img {}
+    .cart-info__value-input {
+        border: 1px solid #EAEAEA;
+        width: 43.19px;
+        height: 24.12px;
+        margin-left: 15px;
+        @include font(18px, 22px, 300, normal);
+        margin-left: 24px;
+        text-align: center;
+    }
 
-.block-items {
-    width: 390px;
-    min-height: 306px;
-    background-color: $white-color;
-    position: relative;
-    padding: 22px 0 0 31px;
-    box-sizing: border-box;
-}
+    .cart-items__button-close {
+        position: absolute;
+        right: 22px;
+        top: 28px;
+        border: none;
+        background-color: $white-color;
+    }
 
-.block-items__heading-cart {
-    font-weight: normal;
-    font-size: 24px;
-    line-height: 29px;
-    width: 201px;
-    padding-bottom: 36px;
+    .cart-list__button-wrapper {
+        @include flex-center-space-between();
+        padding-top: 32px;
+        padding-bottom: 128px;
+    }
 
-}
+    .cart-clear__button {
+        width: 235px;
+        height: 50px;
+        background-color: $clear-white-color;
+        border: 1px solid $light-gray;
+        @include font(14px, 17px, 300, normal);
+    }
 
-.block-items__list-desc {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 22px;
-    line-height: 26px;
-}
-
-.desc-items {
-    color: #575757;
-}
-
-.desc-items__item-price {}
-
-.cart-info {
-    padding-top: 6px;
-}
-
-.cart-info__text {}
-
-.cart-info__value-pink {
-    color: $darkpink-color;
-}
-
-.desc-items__item-color {}
-
-.cart-info__value {}
-
-.value-input__wrapper {
-    border: 1px solid #EAEAEA;
-    width: 43.19px;
-    height: 24.12px;
-    margin-left: 15px;
-    font-size: 18px;
-    line-height: 22px;
-    margin-left: 24px;
-    text-align: center;
-}
-
-.desc-items__item-size {}
-
-.desc-items__item-quantity {}
-
-.block-items__button-close {
-    position: absolute;
-    right: 22px;
-    top: 28px;
-    border: none;
-    background-color: $white-color;
-}
-
-.block-items__img-close {}
-
-.cart-list__button-wrapper {
-    display: flex;
-    justify-content: space-between;
-    padding-top: 32px;
-    padding-bottom: 128px;
-
-}
-
-.clear-cart__button {
-    width: 235px;
-    height: 50px;
-    background-color: white;
-    border: 1px solid #A4A4A4;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 14px;
-    line-height: 17px;
-}
-
-.continue-cart__button {
-    width: 225px;
-    height: 50px;
-    background-color: white;
-    border: 1px solid #A4A4A4;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 14px;
-    line-height: 17px;
+    .cart-continue__button {
+        width: 225px;
+        height: 50px;
+        background-color: $clear-white-color;
+        border: 1px solid $light-gray;
+        @include font(14px, 17px, 300, normal);
+    }
 }
