Index.html page's was made tablet and mobile optimization

--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ button {
 }
 
 .container {
-  width: 1140px;
+  width: 71%;
   margin: 0 auto;
 }
 
@@ -158,6 +158,18 @@ button {
   overflow: hidden;
   border: 0;
   clip: rect(0 0 0 0);
+}
+
+@media (max-width: 1599px) {
+  .container {
+    width: 90.7%;
+  }
+}
+
+@media (max-width: 767px) {
+  .container {
+    width: 92%;
+  }
 }
 
 .header {
@@ -182,6 +194,12 @@ button {
 
 .header .header__link {
   margin: 0 0 0 33px;
+}
+
+@media (max-width: 767px) {
+  .header .header__link {
+    display: none;
+  }
 }
 
 .header .header__link-position {
@@ -210,14 +228,47 @@ button {
   box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
 }
 
+@media (max-width: 1599px) {
+  .header__navigation-block {
+    width: 100%;
+    min-height: 320px;
+  }
+}
+
+@media (max-width: 767px) {
+  .header__navigation-block {
+    min-height: auto;
+  }
+}
+
 .header__navigation-block .header__navigation-title {
   display: inline-block;
   text-transform: uppercase;
   margin: 37px 0 0 34px;
 }
 
+@media (max-width: 767px) {
+  .header__navigation-block .header__navigation-title {
+    margin: 10px 0 0 14px;
+  }
+}
+
+@media (max-width: 1599px) {
+  .header__navigation-block .header__navigation-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+}
+
 .header__navigation-block .header__navigation-item {
   margin: 24px 0 0 34px;
+}
+
+@media (max-width: 767px) {
+  .header__navigation-block .header__navigation-item {
+    margin: 24px 0 50px 15px;
+  }
 }
 
 .header__navigation-block .navigation-item__link {
@@ -232,6 +283,13 @@ button {
   font-style: normal;
   padding-left: 22px;
   padding-top: 10px;
+}
+
+@media (max-width: 1599px) {
+  .header__navigation-block .navigation-item__sublist {
+    margin-right: 10px;
+    padding: 0;
+  }
 }
 
 .header__navigation-block .navigation-item__sublist-link {
@@ -268,6 +326,17 @@ button {
   min-height: 100%;
 }
 
+.brand .brand__image {
+  width: 50%;
+  height: auto;
+}
+
+@media (max-width: 767px) {
+  .brand .brand__image {
+    display: none;
+  }
+}
+
 .brand .brand__heading-wrapper {
   background-color: #F1E4E6;
   flex-grow: 1;
@@ -276,24 +345,68 @@ button {
   align-items: center;
 }
 
+@media (max-width: 1599px) {
+  .brand .brand__heading-wrapper {
+    padding: 0 0 0 69px;
+  }
+}
+
+@media (max-width: 767px) {
+  .brand .brand__heading-wrapper {
+    padding: 0 56px 0 83px;
+    min-height: 363px;
+    justify-content: center;
+  }
+}
+
 .brand .brand__heading--text:before {
   content: "";
   background-color: #F16D7F;
   width: 12px;
   height: 92px;
   position: absolute;
-  top: -10px;
-  left: -30px;
+  top: -12px;
+  left: -25px;
+}
+
+@media (max-width: 1599px) {
+  .brand .brand__heading--text:before {
+    top: -20px;
+  }
+}
+
+@media (max-width: 767px) {
+  .brand .brand__heading--text:before {
+    height: 61px;
+    top: -15px;
+  }
 }
 
 .brand .brand__heading {
   font-size: 48px;
-  line-height: 58px;
+  line-height: 28.4px;
   font-weight: 900;
   font-style: normal;
-  line-height: 38.4px;
   text-transform: uppercase;
   position: relative;
+}
+
+@media (max-width: 1599px) {
+  .brand .brand__heading {
+    font-size: 44px;
+    line-height: 23px;
+    font-weight: 900;
+    font-style: normal;
+  }
+}
+
+@media (max-width: 767px) {
+  .brand .brand__heading {
+    font-size: 38px;
+    line-height: 13px;
+    font-weight: 900;
+    font-style: normal;
+  }
 }
 
 .brand .brand__heading--text {
@@ -301,6 +414,24 @@ button {
   line-height: 38.4px;
   font-weight: 700;
   font-style: normal;
+}
+
+@media (max-width: 1599px) {
+  .brand .brand__heading--text {
+    font-size: 24px;
+    line-height: 29px;
+    font-weight: 700;
+    font-style: normal;
+  }
+}
+
+@media (max-width: 767px) {
+  .brand .brand__heading--text {
+    font-size: 20px;
+    line-height: 19px;
+    font-weight: 700;
+    font-style: normal;
+  }
 }
 
 .brand .brand__heading-text-pink {
@@ -315,30 +446,63 @@ button {
 }
 
 .stocks .stocks__item {
-  width: 360px;
+  width: 31%;
   min-height: 260px;
+  background-size: cover;
   text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+@media (max-width: 1599px) {
+  .stocks .stocks__item {
+    min-height: 167px;
+  }
+}
+
+@media (max-width: 767px) {
+  .stocks .stocks__item {
+    width: 100%;
+    min-height: 248px;
+    margin-top: 32px;
+  }
+}
+
 .stocks .stocks__item--woman {
   background-image: url(../imgs/art1.jpg);
+  background-position: center center;
 }
 
 .stocks .stocks__item--man {
   background-image: url(../imgs/art2.jpg);
+  background-position: center center;
 }
 
 .stocks .stocks__item--kids {
   background-image: url(../imgs/art3.jpg);
+  background-position: center center;
 }
 
 .stocks .stocks__item--accessories {
   width: 100%;
   background-image: url(../imgs/art4.jpg);
   margin-top: 30px;
+  background-position: center center;
+}
+
+@media (max-width: 1599px) {
+  .stocks .stocks__item--accessories {
+    min-height: 116px;
+    margin-top: 19.38px;
+  }
+}
+
+@media (max-width: 767px) {
+  .stocks .stocks__item--accessories {
+    min-height: 111px;
+    margin-top: 32px;
+  }
 }
 
 .stocks .stocks__item-text {
@@ -360,6 +524,18 @@ button {
   margin-top: 97px;
 }
 
+@media (max-width: 1599px) {
+  .products .products__wrap-heading {
+    margin-top: 155px;
+  }
+}
+
+@media (max-width: 767px) {
+  .products .products__wrap-heading {
+    margin-top: 64px;
+  }
+}
+
 .products .products__heading-heading {
   font-size: 30px;
   line-height: 36px;
@@ -377,6 +553,19 @@ button {
   justify-content: space-between;
   flex-wrap: wrap;
   margin-top: 18px;
+}
+
+@media (max-width: 1599px) {
+  .products .products__list {
+    display: flex;
+    justify-content: space-around;
+  }
+}
+
+@media (max-width: 767px) {
+  .products .products__list {
+    flex-wrap: wrap;
+  }
 }
 
 .products .products__item {
@@ -420,6 +609,24 @@ button {
   line-height: 19px;
   font-weight: 300;
   font-style: normal;
+}
+
+@media (max-width: 1599px) {
+  .products .products__link {
+    margin-top: 33px;
+  }
+}
+
+@media (max-width: 767px) {
+  .products .products__link {
+    margin-top: 41.11px;
+  }
+}
+
+@media only screen and (min-width: 767px) and (max-width: 1599px) {
+  .container--tablet {
+    width: 97.5%;
+  }
 }
 
 .products__item:hover .products__item-button {
@@ -494,9 +701,33 @@ button {
   text-align: center;
 }
 
+@media (max-width: 1599px) {
+  .features .features__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 310px;
+  }
+}
+
+@media (max-width: 767px) {
+  .features .features__list {
+    width: 310px;
+  }
+}
+
 .features .features__item {
   color: #FBFBFB;
   width: 320px;
+  min-height: auto;
+}
+
+@media (max-width: 1599px) {
+  .features .features__item {
+    width: 100%;
+    min-height: auto;
+    padding-top: 48px;
+  }
 }
 
 .features .features__item-heading {
@@ -515,11 +746,22 @@ button {
   font-style: normal;
 }
 
+@media (max-width: 1599px) {
+  .features .features__item-text--padding {
+    padding-bottom: 64px;
+  }
+}
+
+@media (max-width: 767px) {
+  .features .features__item-text--padding {
+    padding-bottom: 81px;
+  }
+}
+
 .footer {
   background-image: url(../imgs/background-footer.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: left center;
   min-height: 448px;
 }
 
@@ -530,9 +772,16 @@ button {
   align-items: center;
 }
 
+@media (max-width: 1599px) {
+  .footer .footer__wrap {
+    flex-direction: column;
+    padding-top: 53px;
+  }
+}
+
 .footer .footer__wrap .footer__quote {
   text-align: center;
-  width: 360px;
+  max-width: 370px;
 }
 
 .footer .footer__wrap .footer__quote-text {
@@ -548,6 +797,19 @@ button {
   padding-right: 100px;
 }
 
+@media (max-width: 1599px) {
+  .footer .footer__subscribe {
+    padding: 48px 0 140px 0;
+  }
+}
+
+@media (max-width: 767px) {
+  .footer .footer__subscribe {
+    padding: 59px 0 109px 0;
+    max-width: 360px;
+  }
+}
+
 .footer .footer__subscribe .footer__subscribe-heading {
   font-size: 24px;
   line-height: 167.2%;
@@ -556,16 +818,32 @@ button {
 }
 
 .footer .footer__subscribe .footer__subscribe-text {
-  font-size: 18px;
+  font-size: 14px;
   font-size: 18px;
   line-height: 30px;
   font-weight: 400;
   font-style: normal;
 }
 
+@media (max-width: 767px) {
+  .footer .footer__subscribe .footer__subscribe-text {
+    font-size: 14px;
+    line-height: 15px;
+    font-weight: 400;
+    font-style: normal;
+  }
+}
+
 .footer .footer__subscribe .footer__subscribe-form {
   display: flex;
   padding-top: 32px;
+}
+
+@media (max-width: 767px) {
+  .footer .footer__subscribe .footer__subscribe-form {
+    max-width: 100%;
+    padding-top: 22px;
+  }
 }
 
 .footer .footer__subscribe .subscribe__form-area {
@@ -580,6 +858,12 @@ button {
   font-size: 14px;
 }
 
+@media (max-width: 767px) {
+  .footer .footer__subscribe .subscribe__form-area {
+    width: 100%;
+  }
+}
+
 .footer .footer__subscribe .subscribe__form-button {
   width: 90px;
   height: 50px;
@@ -587,6 +871,12 @@ button {
   background-color: #F16D7F;
   border: none;
   color: #FBFBFB;
+}
+
+@media (max-width: 767px) {
+  .footer .footer__subscribe .subscribe__form-button {
+    width: 140px;
+  }
 }
 
 .footer .footer__info {
@@ -598,6 +888,14 @@ button {
   justify-content: space-between;
   align-items: center;
   min-height: 79px;
+}
+
+@media (max-width: 767px) {
+  .footer .footer__info-wrap {
+    display: flex;
+    flex-direction: column-reverse;
+    padding: 43px 0 10px 0;
+  }
 }
 
 .footer .footer__info-copy {
