--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,3 +5,6 @@ $clear-white-color: white;
 $darkpink-color: #F16D7F;
 $gray-color: #6F6E6E;
 $light-gray: #A4A4A4;
+
+$max-tablet-width: 1599px;
+$max-mobile-width: 767px;
