--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -12,10 +12,22 @@ button {
 }
 
 .container {
-    width: 1140px;
+    width: 71%;
     margin: 0 auto;
 }
 
 .visually-hidden {
     @include visual-hidden();
+}
+
+@media (max-width: $max-tablet-width) {
+    .container {
+        width: 90.7%;
+    }
+}
+
+@media (max-width: $max-mobile-width) {
+    .container {
+        width: 92%;
+    }
 }
