--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -2,16 +2,25 @@
     background-image: url(../imgs/background-footer.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: left center;
+
     min-height: 448px;
+
+
+
 
     .footer__wrap {
         min-height: 448px;
+
         @include flex-center-space-between();
+
+        @include tablet {
+            flex-direction: column;
+            padding-top: 53px;
+        }
 
         .footer__quote {
             text-align: center;
-            width: 360px;
+            max-width: 370px;
         }
 
         .footer__quote-text {
@@ -24,6 +33,15 @@
         text-align: center;
         padding-right: 100px;
 
+        @include tablet {
+            padding: 48px 0 140px 0;
+        }
+
+        @include mobile {
+            padding: 59px 0 109px 0;
+            max-width: 360px;
+        }
+
         .footer__subscribe-heading {
             font-size: 24px;
             line-height: 167.2%;
@@ -32,13 +50,23 @@
         }
 
         .footer__subscribe-text {
-            font-size: 18px;
+            font-size: 14px;
             @include font(18px, 30px, 400, normal);
+
+            @include mobile {
+                @include font(14px, 15px, 400, normal)
+            }
+
         }
 
         .footer__subscribe-form {
             display: flex;
             padding-top: 32px;
+
+            @include mobile {
+                max-width: 100%;
+                padding-top: 22px;
+            }
         }
 
         .subscribe__form-area {
@@ -51,6 +79,10 @@
             padding-left: 22px;
             outline: none;
             font-size: 14px;
+
+            @include mobile {
+                width: 100%;
+            }
         }
 
         .subscribe__form-button {
@@ -60,6 +92,10 @@
             background-color: $darkpink-color;
             border: none;
             color: $white-color;
+
+            @include mobile {
+                width: 140px;
+            }
         }
     }
 
@@ -70,6 +106,12 @@
     .footer__info-wrap {
         @include flex-center-space-between();
         min-height: 79px;
+
+        @include mobile {
+            display: flex;
+            flex-direction: column-reverse;
+            padding: 43px 0 10px 0;
+        }
     }
 
     .footer__info-copy {
